Add description for Figure 4

--- a/Basics_of_Neural_Language_Model_2.ipynb
+++ b/Basics_of_Neural_Language_Model_2.ipynb
@@ -562,6 +562,12 @@
       "source": [
         "## Document classification by RNN\n",
         "\n",
+        "\n",
+        "Document classification is an applied natural language processing task that classifies documents according to their content.\n",
+        "When building a neural network for natural language processing tasks, a word embedding layer is often used for the input layer.\n",
+        "\n",
+        "Figure 4 shows an example architecture of RNN for postive-negative judgement on input sentece.Sentence is split into $n$ words,$t_1, t_2, \\cdots, t_n$, and each splited word is input into each RNN cell recurrently.\n",
+        "\n",
         "<center>\n",
         "<img src='https://drive.google.com/uc?export=view&id=1RN08BTtS54Ubgk0QA1qLNFBK_ixwWchF' width='50%'>\n",
         "</center>\n",
