Updated some figures

--- a/Basics_of_Neural_Language_Model_2.ipynb
+++ b/Basics_of_Neural_Language_Model_2.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -168,7 +167,7 @@
         "* $tanh$ is a hyperbolic tangent function, which is used as an activation function.\n",
         "\n",
         "<center>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=11bUUhdqGXo_B5yOxU_JY1KRW0nq5txK0' width='60%'>\n",
+        "<img src='https://drive.google.com/uc?export=view&id=105u8Lk7z7RkSfgDTAc_DMgGIpGWbid2q' width='70%'>\n",
         "</center>\n",
         "<center>\n",
         "Figure 2. RNN cell architecture\n",
@@ -560,10 +559,10 @@
         "id": "m7K7RT43uv1v"
       },
       "source": [
-        "## Document classification by RNN\n",
+        "## Sentiment analysis by RNN\n",
         "\n",
         "\n",
-        "Document classification is an applied natural language processing task that classifies documents according to their content.\n",
+        "Sentiment analysis and document classification are applied natural language processing tasks. Sentiment analysis is a task for prediting emotion for the input sentence. Document classification task requires to classify documents according to their content.\n",
         "When building a neural network for natural language processing tasks, a word embedding layer is often used for the input layer.\n",
         "\n",
         "Figure 4 shows an example architecture of RNN for postive-negative judgement on input sentece.Sentence is split into $n$ words,$t_1, t_2, \\cdots, t_n$, and each splited word is input into each RNN cell recurrently.\n",
@@ -961,12 +960,11 @@
         "* LSTM prevents the problem of vanishing gradients during learning by adding a separate memory cell to transfer memory to the next LSTM layer.\n",
         "\n",
         "<center>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1mVrLvxJMOAYTUocarZmyYocJV-b8bvNU' width='70%'>\n",
+        "<img src='https://drive.google.com/uc?export=view&id=1FtxOh6SmN56d8cDyuAFwKN6dtl5AO-4C' width='70%'>\n",
         "</center>\n",
         "<center>\n",
         "Figure 5. LSTM cell architecture\n",
-        "</center>\n",
-        "\n"
+        "</center>\n"
       ]
     },
     {
@@ -1095,7 +1093,7 @@
         "* Unlike LSTM, it does not use memory cells, but it is structured that gradient vanishing does not occur during learning.\n",
         "\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1xCFGPK8-KhbaGQYTPcKxN4xxHCO-C_Tp' width='90%'>\n",
+        "<img src='https://drive.google.com/uc?export=view&id=13TskGR7UE5Mm2E5ofvOKxGIXl2xQotfQ' width='90%'>\n",
         "</center>\n",
         "<center>\n",
         "Figure 6. Comaprison of cell architectures of RNN, LSTM, GRU\n",
