--- a/Basics_of_Neural_Language_Model_2.ipynb
+++ b/Basics_of_Neural_Language_Model_2.ipynb
@@ -46,9 +46,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Requirement\n",
-        "PC and Internet connection\n",
-        "Google Colaboratory ... Google account is required"
+        "## Requirement\n",
+        "* PC and Internet connection\n",
+        "* Google Colaboratory ... Google account is required"
       ],
       "metadata": {
         "id": "eRq8iy9Euuc_"
