Changed style of itemization.

--- a/Basics_of_Neural_Language_Model-1.ipynb
+++ b/Basics_of_Neural_Language_Model-1.ipynb
@@ -1422,9 +1422,9 @@
         "vector('king') - vector('man') + vector('woman') = vector('queen')\n",
         "\n",
         "<br>\n",
-        "(1) Using embedded vectors by word2vec, create document vectors for right side and the left side of the above equations, respectively.<br>\n",
-        "(2) Using the function cosine_sim(), calculate the cosine similarity. <br>\n",
-        "(3) Based on the results of (2), check if the equations are correct or not.\n",
+        "1. Using embedded vectors by word2vec, create document vectors for right side and the left side of the above equations, respectively.<br>\n",
+        "2. Using the function cosine_sim(), calculate the cosine similarity. <br>\n",
+        "3. Based on the results of (2), check if the equations are correct or not.\n",
         "\n"
       ],
       "metadata": {
