--- a/Basics_of_Neural_Language_Model_2.ipynb
+++ b/Basics_of_Neural_Language_Model_2.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -664,6 +665,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### **Code example**\n",
+        "\n",
         "Using index information, each word id can be converted to the correspond word."
       ],
       "metadata": {
