--- a/Basics_of_Neural_Language_Model-1.ipynb
+++ b/Basics_of_Neural_Language_Model-1.ipynb
@@ -7,8 +7,7 @@
       "collapsed_sections": [
         "9aIsWInjUrU2",
         "hiV4yWRxbBtk"
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -310,14 +309,60 @@
       "source": [
         "### **Code example**\n",
         "\n",
-        "Let's write a python program that calculates the weighted sum for two input values ​​$x_1$ and $x_2$ as a function _two_input_weight(). As arguments, take two input values ​​x1, x2, two weight values ​​w1, w2, and bias b, and output _y as the return value as follows..\n",
-        "\n",
-        "_y = _two_input_weight(x1, x2, w1, w2, b)\n",
-        "\n",
-        "Furthermore, calculate results when $(x_1, x_2) = (2, 4), (w_1, w_2) = (3, 5)$, and $b = 1$."
+        "We can write Equation (2) in python code as follow."
       ],
       "metadata": {
         "id": "7e14BtSaV_OV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_y = x1 * w1 + x2 * w2 + b"
+      ],
+      "metadata": {
+        "id": "R0xwZIHX-GBq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's calculate using values, (x1,x2)=(2,4),(w1,w2)=(3,5), b=1."
+      ],
+      "metadata": {
+        "id": "YHtKgEiB-Hs2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x1, x2) = (2, 4)\n",
+        "(w1, w2) = (3, 5)\n",
+        "b = 1\n",
+        "\n",
+        "_y = x1 * w1 + x2 * w2 + b\n",
+        "\n",
+        "print(_y)"
+      ],
+      "metadata": {
+        "id": "xzw-4Gwr-KcL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Practice 1-1**\n",
+        "1. Write a python program that calculates the weighted sum for two input values ​​$x_1$ and $x_2$ as a function _two_input_weight(). As arguments, take two input values ​​x1, x2, two weight values ​​w1, w2, and bias b, and output _y as the return value as follows.<br><br>\n",
+        "_y = _two_input_weight(x1, x2, w1, w2, b)\n",
+        "\n",
+        "2. Furthermore, calculate results when $(x_1, x_2) = (2, 4), (w_1, w_2) = (3, 5)$, and $b = 1$."
+      ],
+      "metadata": {
+        "id": "z-mxuXfNXaRM"
       }
     },
     {
@@ -352,18 +397,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **Practice 1-1**\n",
-        "Write a python program for the above equation as a function _two_input_weight(). As arguments, take two input values ​​x1, x2, two weight values ​​w1, w2, and bias b, and output _y as the return value as follows.\n",
-        "\n",
-        "_y = _two_input_weight(x1, x2, w1, w2, b)"
-      ],
-      "metadata": {
-        "id": "z-mxuXfNXaRM"
-      }
     },
     {
       "cell_type": "markdown",
@@ -483,9 +516,61 @@
       "source": [
         "### **Code example**\n",
         "\n",
-        " Let's write a python program that calculates the weighted sum of two neurons for $n$ input values $​​x = (x_1, x_2, \\cdots , x_n)$ as a function _fc_weight() This function calculates the weighted sum of fully connected layers. As arguments, take an array for vector $\\mathbf{x}$ corresponding to $n$ input values, a matrix $\\mathbf{W}$ corresponding to each weight value of $m$ neurons, and an array for vector $\\mathbf{b}$ corresponding to each bias, and output an array for vector $\\_\\mathbf{y}$ as a return value.\n",
+        "We can write Equation (5) in python code as follow."
+      ],
+      "metadata": {
+        "id": "mJ9wJ3WMUZVA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_y = np.matmul(x, W) + b"
+      ],
+      "metadata": {
+        "id": "_63d08CcUa5i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's calculate for vectors and matrices, x=(x1,x2)=(2,4) , W=((w11,w21),(w12,w22))=((3,5),(6,5)), b=(b1,b2)=(1,3). We can use numpy's array function array() for arrays."
+      ],
+      "metadata": {
+        "id": "OQC0ku4HUdJy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
         "\n",
-        "_y = _fc_weight(x, W, b)"
+        "x = np.array([2,4])\n",
+        "W = np.array([[3, 5],[6,5]])\n",
+        "b = np.array([1,3])\n",
+        "\n",
+        "_y = np.matmul(x, W) + b\n",
+        "\n",
+        "print(_y)"
+      ],
+      "metadata": {
+        "id": "vVPYrGHcUffJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Practice 1-2**\n",
+        "\n",
+        " 1. Write a python program that calculates the weighted sum of two neurons for $n$ input values $​​x = (x_1, x_2, \\cdots , x_n)$ as a function _fc_weight() This function calculates the weighted sum of fully connected layers. As arguments, take an array for vector $\\mathbf{x}$ corresponding to $n$ input values, a matrix $\\mathbf{W}$ corresponding to each weight value of $m$ neurons, and an array for vector $\\mathbf{b}$ corresponding to each bias, and output an array for vector $\\_\\mathbf{y}$ as a return value.\n",
+        "<br><br>\n",
+        "_y = _fc_weight(x, W, b)\n",
+        "\n",
+        "2. Furthermore, calculates the fesults for $\\mathbf{x} = (x_1, x_2) = (2, 4)$, $\\mathbf{W} = ((w_{11}, w_{21}), (w_{12}, w_{22})) = ((3, 5), (6, 5))$, $\\mathbf{b} = (b_1, b_2) = (1, 3)$. Use numpy's array function array() for arrays."
       ],
       "metadata": {
         "id": "NoqDmPkYzlrP"
