Add correction and answers
Text update after the class on SIIT

--- a/Basics_of_Neural_Language_Model_1.ipynb
+++ b/Basics_of_Neural_Language_Model_1.ipynb
@@ -680,13 +680,15 @@
         "\n",
         "fig = plt.figure()\n",
         "\n",
-        "A = fig.add_subplot(111)\n",
-        "A.grid(linestyle=\"dotted\")\n",
-        "A.set_xlabel(\"x\")\n",
-        "A.set_ylabel(\"y\")\n",
+        "graph = fig.add_subplot(111)\n",
+        "graph.grid(linestyle=\"dotted\")\n",
+        "graph.set_xlabel(\"x\")\n",
+        "graph.set_ylabel(\"y\")\n",
+        "\n",
+        "x = np.linspace(-10, 10, num=300)\n",
         "\n",
         "y = sigmoid(x)\n",
-        "A.plot(x, y)\n",
+        "graph.plot(x, y)\n",
         "\n",
         "plt.show()"
       ],
