--- a/Basics_of_Neural_Language_Model_3.ipynb
+++ b/Basics_of_Neural_Language_Model_3.ipynb
@@ -207,33 +207,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9fXwiiks3RLw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "41190c55-71d8-467a-9b13-e586a4e6bdb7"
+        "id": "9fXwiiks3RLw"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-03-03 02:44:28--  http://mattmahoney.net/dc/text8.zip\n",
-            "Resolving mattmahoney.net (mattmahoney.net)... 34.198.1.81\n",
-            "Connecting to mattmahoney.net (mattmahoney.net)|34.198.1.81|:80... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 31344016 (30M) [application/zip]\n",
-            "Saving to: ‘text8.zip’\n",
-            "\n",
-            "text8.zip           100%[===================>]  29.89M  20.0MB/s    in 1.5s    \n",
-            "\n",
-            "2024-03-03 02:44:30 (20.0 MB/s) - ‘text8.zip’ saved [31344016/31344016]\n",
-            "\n",
-            "Archive:  text8.zip\n",
-            "  inflating: text8                   \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!wget http://mattmahoney.net/dc/text8.zip\n",
         "!unzip text8.zip"
@@ -291,6 +267,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "First, we create a self-attention weight matrix"
+      ],
+      "metadata": {
+        "id": "ltuD3LgvtstV"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -312,6 +297,15 @@
         "    #print(w1, w2, score)\n",
         "    a = np.append(a, score)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Then, we draw a heat map of the self-attention weight"
+      ],
+      "metadata": {
+        "id": "dpEMBCS9tnO4"
+      }
     },
     {
       "cell_type": "code",
@@ -493,39 +487,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Train word2vec model using text8 corpus."
+        "Load pre-trained word2vec model."
       ],
       "metadata": {
         "id": "Y78LovycbF23"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!wget http://mattmahoney.net/dc/text8.zip\n",
-        "!unzip text8.zip"
-      ],
-      "metadata": {
-        "id": "wnJi7jsxaoGf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from gensim.models.word2vec import Word2Vec, Text8Corpus\n",
-        "\n",
-        "sentences = Text8Corpus('text8')\n",
-        "model = Word2Vec(sentences, vector_size=100)\n",
-        "\n",
-        "model.save('model.bin')"
-      ],
-      "metadata": {
-        "id": "AsLDvJfTatQP"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -554,6 +520,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We calculate semantic vectors."
+      ],
+      "metadata": {
+        "id": "RDU3ciZmsj_O"
+      }
     },
     {
       "cell_type": "code",
@@ -624,7 +599,8 @@
         "a3 = np.dot(h3, hd1)\n",
         "a4 = np.dot(h4, hd1)\n",
         "a5 = np.dot(h5, hd1)\n",
-        "a6 = np.dot(h6, hd1)"
+        "a6 = np.dot(h6, hd1)\n",
+        "a7 = np.dot(h7, hd1)"
       ],
       "metadata": {
         "id": "b4ykSNVPRMg7"
@@ -644,7 +620,7 @@
     {
       "cell_type": "code",
       "source": [
-        "c1 = a1 * h1 + a2 * h2 + a3 * h3 + a4 * h4 + a5 * h5 + a6 * h6"
+        "c1 = a1 * h1 + a2 * h2 + a3 * h3 + a4 * h4 + a5 * h5 + a6 * h6 + a7 * h7"
       ],
       "metadata": {
         "id": "MR4V4jeBS2sg"
@@ -672,6 +648,59 @@
       "metadata": {
         "id": "Mm6IwtUITRYo"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# \"Dinner at the restaurant is my favorite.\"\n",
+        "\n",
+        "# at\n",
+        "y2 = model.wv[\"at\"]\n",
+        "hd2 = RNN_cell(y2, hd1, Wx, Wo, b)\n",
+        "\n",
+        "# the\n",
+        "y3 = model.wv[\"the\"]\n",
+        "hd3 = RNN_cell(y3, hd2, Wx, Wo, b)\n",
+        "\n",
+        "# restaurant\n",
+        "y4 = model.wv[\"restaurant\"]\n",
+        "hd4 = RNN_cell(y4, hd3, Wx, Wo, b)"
+      ],
+      "metadata": {
+        "id": "sHW7tjtxfJKj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate attention weight for \"restaurant\"\n",
+        "a1 = np.dot(h1, hd4)\n",
+        "a2 = np.dot(h2, hd4)\n",
+        "a3 = np.dot(h3, hd4)\n",
+        "a4 = np.dot(h4, hd4)\n",
+        "a5 = np.dot(h5, hd4)\n",
+        "a6 = np.dot(h6, hd4)\n",
+        "a7 = np.dot(h7, hd4)"
+      ],
+      "metadata": {
+        "id": "e0pbGxmIf973"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate context vector for \"restaurant\"\n",
+        "c4 = a1 * h1 + a2 * h2 + a3 * h3 + a4 * h4 + a5 * h5 + a6 * h6 + a7 * h7"
+      ],
+      "metadata": {
+        "id": "t4uMXAqzgDsP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -724,6 +753,10 @@
       "source": [
         "## Positional encoding\n",
         "* Encoding processing that gives positional information to each word (token) in a sentence\n",
+        "\n",
+        "$$ PE_{(pos,2i)} = sin(pos/10000^{2i/d_{model}}) \\tag{4}$$\n",
+        "$$ PE_{(pos,2i+1)} = cos(pos/10000^{2i/d_{model}}) \\tag{5}$$\n",
+        "\n",
         "\n",
         "<center>\n",
         "<img src='https://drive.google.com/uc?export=view&id=1SzCdieqFTyHQjzh-Hk3G0jvCv-fJRU7n' width='40%'>\n",
@@ -1583,7 +1616,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
